添加add_bill_dialog

--- a/app/src/main/res/layout/dialog_add_bill.xml
+++ b/app/src/main/res/layout/dialog_add_bill.xml
@@ -44,11 +44,311 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <View
+        android:id="@+id/bg_bill_type"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:elevation="0.5dp"
         android:background="@drawable/bg_add_bill_type"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tab_top"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp" />
+    <View
+        android:id="@+id/bg_bill_keyboard"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:elevation="1dp"
+        android:background="@drawable/bg_add_bill_keyboard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bg_bill_type"
+        android:layout_marginTop="250dp"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:elevation="1dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="@id/bg_bill_type"
+        app:layout_constraintBottom_toTopOf="@id/bg_bill_keyboard">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingHorizontal="8dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <CheckedTextView
+                android:layout_width="0dp"
+                android:layout_height="88dp"
+                android:layout_weight="1"
+                android:text="上衣"
+                android:checked="true"
+                android:paddingBottom="2.5dp"
+                android:textAlignment="gravity"
+                android:gravity="center_horizontal|bottom"
+                android:textColor="@drawable/color_tv_add_bill_type"
+                android:background="@drawable/bg_add_coat_selector"/>
+            <CheckedTextView
+                android:layout_width="0dp"
+                android:layout_height="88dp"
+                android:layout_weight="1"
+                android:text="头盔"
+                android:paddingBottom="2.5dp"
+                android:textAlignment="gravity"
+                android:gravity="center_horizontal|bottom"
+                android:textColor="@drawable/color_tv_add_bill_type"
+                android:background="@drawable/bg_add_helmet_selector"/>
+            <CheckedTextView
+                android:layout_width="0dp"
+                android:layout_height="88dp"
+                android:layout_weight="1"
+                android:text="手套"
+                android:paddingBottom="2.5dp"
+                android:textAlignment="gravity"
+                android:gravity="center_horizontal|bottom"
+                android:textColor="@drawable/color_tv_add_bill_type"
+                android:background="@drawable/bg_add_gloves_selector"/>
+            <CheckedTextView
+                android:layout_width="0dp"
+                android:layout_height="88dp"
+                android:layout_weight="1"
+                android:text="裤子"
+                android:paddingBottom="2.5dp"
+                android:textAlignment="gravity"
+                android:gravity="center_horizontal|bottom"
+                android:textColor="@drawable/color_tv_add_bill_type"
+                android:background="@drawable/bg_add_pants_selector"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="8dp"
+            android:orientation="horizontal">
+            <CheckedTextView
+                android:layout_width="0dp"
+                android:layout_height="88dp"
+                android:layout_weight="1"
+                android:text="其他"
+                android:paddingBottom="2.5dp"
+                android:textAlignment="gravity"
+                android:gravity="center_horizontal|bottom"
+                android:textColor="@drawable/color_tv_add_bill_type"
+                android:background="@drawable/bg_add_other_selector"/>
+            <CheckedTextView
+                android:layout_width="0dp"
+                android:layout_height="88dp"
+                android:layout_weight="1"
+                android:text="摩托车"
+                android:paddingBottom="2.5dp"
+                android:textAlignment="gravity"
+                android:gravity="center_horizontal|bottom"
+                android:textColor="@drawable/color_tv_add_bill_type"
+                android:background="@drawable/bg_add_motorcyle_selector"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="88dp"
+                android:layout_weight="1" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="88dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </LinearLayout>
+    <ImageView
+        android:layout_width="14dp"
+        android:layout_height="7dp"
+        android:src="@drawable/ic_arrowtop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bg_bill_keyboard"
+        android:elevation="1.5dp"
+        android:layout_marginTop="14dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:elevation="1.5dp"
+        android:background="#D5DE5D"
+        android:paddingHorizontal="10dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toTopOf="@id/bg_bill_keyboard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/btn_zc"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="3"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/bg_input_bill"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="#7E7E7E"
+                    android:textSize="11sp"
+                    android:gravity="center_horizontal"
+                    android:text="备注"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:paddingHorizontal="15dp"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:hint="Master card(USD)"
+                    android:gravity="center_vertical|end"
+                    android:focusable="false"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/btn_member"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/btn_today"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/btn_delete"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/btn_ok"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key_multe"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key1"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key2"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key3"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key_clip"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key4"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key5"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key6"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key_sub"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key7"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key8"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key9"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key_plus"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key_point"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/key0"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="41dp"
+                android:layout_weight="1"
+                android:src="@drawable/btn_equal"/>
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
